--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-test
+<iframe src="https://www.google.com/calendar/embed?title=CoC%20Events&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=l340r48e11tq5u58aoflgt8bqk%40group.calendar.google.com&amp;color=%23B1440E&amp;src=p3rol2ah8gc9vk5fp8le69jg8k%40group.calendar.google.com&amp;color=%23B1365F&amp;src=ucouncilgatech%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </head>
 </body>
 </html>
